[package]

name = "strophe"
license = "MIT"
version = "0.0.1"
authors = ["Cristian Kubis <cristian.kubis@tsunix.de>"]
description = "FFI bindings to libstrophe a simple, lightweight library for writing XMPP clients."
documentation = "https://github.com/tsurai/libstrophe-sys"
homepage = "https://github.com/tsurai/libstrophe-sys"
repository = "https://github.com/tsurai/libstrophe-sys"
readme = "README.md"
keywords = ["strophe","libstrophe", "xmpp", "jabber"]
build = "build.rs"

[dependencies]
libc = "^0.2.4"

[build-dependencies]
pkg-config = "0.3.2"

[lib]
name = "strophe"
