[package]
name = "libstrophe-sys"
license = "MIT"
version = "0.0.2"
authors = ["Cristian Kubis <cristian.kubis@tsunix.de>"]
description = "FFI bindings to libstrophe a simple, lightweight library for writing XMPP clients."
documentation = "https://docs.rs/libstrophe-sys"
homepage = "https://github.com/tsurai/libstrophe-sys"
repository = "https://github.com/tsurai/libstrophe-sys"
readme = "README.md"
keywords = ["strophe","libstrophe", "xmpp", "jabber"]

[badges]
travis-ci = { repository = "tsurai/libstrophe-sys" }

[dependencies]
libc = "^0.2.23"

[lib]
name = "strophe"
